observe-jaeger/serviceb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceb
  labels:
    app: serviceb
    version: v1
spec:
  selector:
    matchLabels:
      app: serviceb
      version: v1
  template:
    metadata:
      labels:
        app: serviceb
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: serviceb
        image: docker.io/josephassiga/ossm-tracing-serviceb:v1.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: serviceb
spec:
  selector:
    app: serviceb
  ports:
  - name: http
    port: 8080
