observe-jaeger/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: observe-jaeger-vs
spec:
  hosts:
  - "*"
  gateways:
  - observe-jaeger-gateway
  http:
  - match:
    - uri:
        exact: /trace
    rewrite:
      uri: /
    route:
      - destination:
          host: servicea
          port:
            number: 8080
